--- a/despre_html.html
+++ b/despre_html.html
@@ -64,5 +64,20 @@
             <br />
             <button type="button">Inregistreaza</button>
         </form>
+        <br />
+        Pentru a crea liste se pot folosi tag-urile:<br />
+        <ol type="i">
+            <li><small>ul</small> - lista neordonata </li>
+            <li><small>ol</small> - lista ordonata </li>
+            <li><small>li</small> - item din lista </li>
+            <li><small>dl</small> - lista cu descrieri </li>
+            <li><small>dt</small> - termen dintr-o lista cu descrieri </li>
+            <li><small>dd</small> - descrierea dintr-o lista cu descriere </li>
+        </ol>
+        <br />
+        Pentru a insera un document HTML în altul se poate folosi tag-ul <small>&lt;iframe&gt;.</small> <br />
+        Astfel, exemplul de mai jos inserează conținutul de la adresa <a href="https://html.spec.whatwg.org/multipage/">https://html.spec.whatwg.org/multipage/.</a><br />
+        <iframe src="https://html.spec.whatwg.org/multipage/" height="150" width="700"></iframe>
+
     </body>
 </html>
