--- a/despre_html.html
+++ b/despre_html.html
@@ -2,9 +2,21 @@
 <html>
     <head>
         <meta charset="utf-8"/>
-        <title>PROGRAMARE web</title>
+        <title>PROGRAMARE WEB</title>
     </head>
     <body>
+        <header>
+                <h1> <img src="images/logo.jpg" alt="logo" height="150" width="200" />
+                    Programare web cu red panda
+                </h1>
+        </header>
+        <nav>
+            <a href="index.html">Acasa</a> &nbsp; &nbsp; &nbsp;
+            <a href="inregistreaza.html">Inregistrare</a> &nbsp; &nbsp; &nbsp;
+            <a href="video.html">Video</a> &nbsp; &nbsp; &nbsp;
+            <a href="despre_html.html">Despre</a> 
+        </nav>
+
         <h1>Programare web</h1>
         <h2>Limbajul HTML</h2>
         <p><b>HTML(HyperText Markup Language)</b> este un <i>limbaj de marcare</i> utilizat pentru a crea pagini web.
@@ -78,6 +90,9 @@
         Pentru a insera un document HTML în altul se poate folosi tag-ul <small>&lt;iframe&gt;.</small> <br />
         Astfel, exemplul de mai jos inserează conținutul de la adresa <a href="https://html.spec.whatwg.org/multipage/">https://html.spec.whatwg.org/multipage/.</a><br />
         <iframe src="https://html.spec.whatwg.org/multipage/" height="150" width="700"></iframe>
-
+        <hr>
+        <footer>
+            <p> &copy; 2020.Programare web</p>
+        </footer>
     </body>
 </html>
