Rezolvare task 3- adaugare pagina desen in nav

--- a/inregistreaza.html
+++ b/inregistreaza.html
@@ -16,7 +16,8 @@
         <a href="index.html">Acasa</a> &nbsp; &nbsp; &nbsp;
         <a href="inregistreaza.html">Inregistrare</a> &nbsp; &nbsp; &nbsp;
         <a href="video.html">Video</a> &nbsp; &nbsp; &nbsp;
-        <a href="despre_html.html">Despre</a>
+        <a href="despre_html.html">Despre</a> &nbsp; &nbsp; &nbsp;
+        <a href="deseneaza.html">Deseneaza</a>
     </nav>
 
     <br >
@@ -81,7 +82,7 @@
             <label for="varsta">Varsta:</label>
             <input type="range" id="varsta" name="varsta"><br><br>
 
-            <label for="adresaurl">Adrea paginii personale:</label>
+            <label for="adresaurl">Adresa paginii personale:</label>
             <input type="url" id="adresaurl" name="adresaurl"><br><br>
 
             <label for="descriere">Descriere:</label>
