--- a/video.html
+++ b/video.html
@@ -14,7 +14,8 @@
             <a href="index.html">Acasa</a> &nbsp; &nbsp; &nbsp;
             <a href="inregistreaza.html">Inregistrare</a> &nbsp; &nbsp; &nbsp;
             <a href="video.html">Video</a> &nbsp; &nbsp; &nbsp;
-            <a href="despre_html.html">Despre</a> 
+            <a href="despre_html.html">Despre</a> &nbsp; &nbsp; &nbsp;
+            <a href="deseneaza.html">Deseneaza</a> 
         </nav>
         <br \>
         <br \>
