--- a/deseneaza.html
+++ b/deseneaza.html
@@ -11,11 +11,11 @@
                 </h1>
         </header>
         <nav>
-            <a href="index.html">Acasa</a> &nbsp; &nbsp; &nbsp;
+            <a href="index.html">Acasă</a> &nbsp; &nbsp; &nbsp;
             <a href="inregistreaza.html">Inregistrare</a> &nbsp; &nbsp; &nbsp;
             <a href="video.html">Video</a> &nbsp; &nbsp; &nbsp;
             <a href="despre_html.html">Despre</a> &nbsp; &nbsp; &nbsp;
-            <a href="deseneaza.html">Deseneaza</a>
+            <a href="deseneaza.html">Desenează</a>
         </nav>
 
     
@@ -37,12 +37,17 @@
             <circle cx="60" cy="580" r="10" stroke="green" stroke-width="1" fill="pink" />
             <circle cx="100" cy="500" r="10" stroke="green" stroke-width="1" fill="magenta" />
             <circle cx="130" cy="285" r="10" stroke="green" stroke-width="1" fill="violet" />
-            <rect x="0" y="682" rx="20" ry="20" width="205" height="50" style="fill:red;stroke:black;stroke-width:3;opacity:0.5" />
+            <radialGradient id="gradrect" cx="50%" cy="50%" r="50%" fx="50%" fy="50%">
+                <stop offset="0%" style="stop-color:rgb(255,255,255);
+                stop-opacity:0" />
+                <stop offset="100%" style="stop-color:rgb(0,0,255);stop-opacity:1" />
+            </radialGradient>
+            <rect x="0" y="682" rx="20" ry="20" width="205" height="50" style="fill:url(#gradrect)" />
             <polyline points="195 682,220 682,220 702,240 702,240 722,260 722,260 740, 280 740" style="fill:white;stroke:red;stroke-width:4" />
             <defs>
                 <linearGradient id="grad1" x1="0%" y1="0%" x2="100%" y2="0%">
-                  <stop offset="0%" style="stop-color:rgb(255,255,0);stop-opacity:1" />
-                  <stop offset="100%" style="stop-color:rgb(255,0,0);stop-opacity:1" />
+                  <stop offset="0%" style="stop-color:rgb(255,255,0);"/> <!--stop-opacity:1-->
+                  <stop offset="100%" style="stop-color:rgb(255,0,0);"/> <!--stop-opacity:1" />-->
                 </linearGradient>
             </defs>
             <ellipse cx="450" cy="70" rx="110" ry="55" fill="url(#grad1)" />
