--- a/deseneaza.html
+++ b/deseneaza.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8"/>
-        <title>PROGRAMARE WEB</title>
+        <title>DESEN</title>
     </head>
     <body>
         <header>
@@ -12,10 +12,10 @@
         </header>
         <nav>
             <a href="index.html">Acasă</a> &nbsp; &nbsp; &nbsp;
-            <a href="inregistreaza.html">Inregistrare</a> &nbsp; &nbsp; &nbsp;
+            <a href="inregistreaza.html">Înregistrează</a> &nbsp; &nbsp; &nbsp;
             <a href="video.html">Video</a> &nbsp; &nbsp; &nbsp;
             <a href="despre_html.html">Despre</a> &nbsp; &nbsp; &nbsp;
-            <a href="deseneaza.html">Desenează</a>
+            <a href="deseneaza.html">Desen</a>
         </nav>
 
     
