--- a/despre_html.html
+++ b/despre_html.html
@@ -11,11 +11,11 @@
                 </h1>
         </header>
         <nav>
-            <a href="index.html">Acasa</a> &nbsp; &nbsp; &nbsp;
-            <a href="inregistreaza.html">Inregistrare</a> &nbsp; &nbsp; &nbsp;
+            <a href="index.html">Acasă</a> &nbsp; &nbsp; &nbsp;
+            <a href="inregistreaza.html">Înregistrează</a> &nbsp; &nbsp; &nbsp;
             <a href="video.html">Video</a> &nbsp; &nbsp; &nbsp;
             <a href="despre_html.html">Despre</a> &nbsp; &nbsp; &nbsp;
-            <a href="deseneaza.html">Deseneaza</a>
+            <a href="deseneaza.html">Desen</a>
         </nav>
 
         <h1>Programare web</h1>
@@ -23,7 +23,7 @@
         <p><b>HTML(HyperText Markup Language)</b> este un <i>limbaj de marcare</i> utilizat pentru a crea pagini web.
             <br />
             <br />
-            Un exemplu de cod html il gasiti in imaginea urmatoare care se afla la adresa <a href="http://upload.wikimedia.org/wikipedia/commons/e/e4/HTML_logo.png">http://upload.wikimedia.org/wikipedia/commons/e/e4/HTML_logo.png</a>
+            Un exemplu de cod html îl găsiți în imaginea următoare care se află la adresa <a href="http://upload.wikimedia.org/wikipedia/commons/e/e4/HTML_logo.png">http://upload.wikimedia.org/wikipedia/commons/e/e4/HTML_logo.png</a>
             <br />
             Imaginea are atributul <small>height</small> de valoare 147.
             <br />
@@ -31,61 +31,61 @@
                 height="147" width="100"/>
             <br />
         </p>
-        <i><b>Tag-urile</b></i> html cele mai utilizate in realizarea tabelelor sunt:
+        <i><b>Tag-urile</b></i> html cele mai utilizate în realizarea tabelelor sunt:
         <table border="1">
             <tr>
                 <td>table</td>
-                <td>defineste un tabel</td>
+                <td>definește un tabel</td>
             </tr>
             <tr>
                 <td>tr</td>
-                <td>un rand intr-un tabel</td>
+                <td>un rând într-un tabel</td>
             </tr>
             <tr>
                 <td>td</td>
-                <td>o celula intr-un tabel</td>
+                <td>o celulă într-un tabel</td>
             </tr>               
         </table>
-        <b>Observatie:</b> Pentru a pune un contur unui tabel se poate (dar nu se recomanda) sa se puna atributul <small>border="1"</small>.
+        <b>Observație:</b> Pentru a pune un contur unui tabel se poate (dar nu se recomandă) să se pună atributul <small>border="1"</small>.
         <br />
         La validare va da eroarea: <i>The border attribute on the table element is obsolete.</i>
         <br />
         <br />
-        Formularele se pot crea cu ajutorul tag-ului <small>form</small> care poate contine tag-urile: <small>input, textarea, label, select, option, button.</small>
+        Formularele se pot crea cu ajutorul tag-ului <small>form</small> care poate conține tag-urile: <small>input, textarea, label, select, option, button.</small>
         <br />
-        Pentru mai multe detalii consultati cursul sau tutorialul <a href="http://www.w3schools.com/html/html_forms.asp">HTML Forms and Inputs</a> de la adresa <a href="http://www.w3schools.com/html/html_forms.asp">http://www.w3schools.com/html/html_forms.asp</a>.
+        Pentru mai multe detalii consultați cursul sau tutorialul <a href="http://www.w3schools.com/html/html_forms.asp">HTML Forms and Inputs</a> de la adresa <a href="http://www.w3schools.com/html/html_forms.asp">http://www.w3schools.com/html/html_forms.asp</a>.
         <br />
         <br />
-        Un exemplu de formular este urmatorul:
+        Un exemplu de formular este următorul:
         <form>
             <label for="lname">Nume:</label>
             <input type="text" id="lname" name="lname" value="nume"><br/>
-            <label for="fname">Preume:</label>
+            <label for="fname">Prenume:</label>
             <input type="text" id="fname" name="fname" value="prenume"><br/>
             <label for="parola">Parola:</label>
             <input type="password" id="parola" name="parola" value="***"><br/>
-            <label for="culoare">Culoare preferata:</label>
+            <label for="culoare">Culoare preferată:</label>
             <select id="culoare" name="culoare">
-                <option value="rosu">rosu</option>
+                <option value="rosu">roșu</option>
                 <option value="verde">verde</option>
                 <option value="negru">negru</option>
             </select><br />
             <label for="descriere">Descriere:</label>
             <textarea rows="2" cols="3" name="descriere"></textarea><br/>
             <input type="checkbox" id="confirm" name="confirm" value="Sunt de acord cu conditiile">
-            <label for="confirm">Sunt de acord cu conditiile</label><br /> 
+            <label for="confirm">Sunt de acord cu condițiile</label><br /> 
             <br />
-            <button type="button">Inregistreaza</button>
+            <button type="button">Înregistrează</button>
         </form>
         <br />
         Pentru a crea liste se pot folosi tag-urile:<br />
         <ol type="i">
-            <li><small>ul</small> - lista neordonata </li>
-            <li><small>ol</small> - lista ordonata </li>
-            <li><small>li</small> - item din lista </li>
-            <li><small>dl</small> - lista cu descrieri </li>
-            <li><small>dt</small> - termen dintr-o lista cu descrieri </li>
-            <li><small>dd</small> - descrierea dintr-o lista cu descriere </li>
+            <li><small>ul</small> - listă neordonată </li>
+            <li><small>ol</small> - listă ordonată </li>
+            <li><small>li</small> - item din listă </li>
+            <li><small>dl</small> - listă cu descrieri </li>
+            <li><small>dt</small> - termen dintr-o listă cu descrieri </li>
+            <li><small>dd</small> - descrierea dintr-o listă cu descriere </li>
         </ol>
         <br />
         Pentru a insera un document HTML în altul se poate folosi tag-ul <small>&lt;iframe&gt;.</small> <br />
