--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8"/>
-        <title> ACASA </title>
+        <title> ACASĂ </title>
     </head>
     <body>
         <header>
@@ -11,15 +11,15 @@
                 </h1>
         </header>
         <nav>
-            <a href="index.html">Acasa</a> &nbsp; &nbsp; &nbsp;
-            <a href="inregistreaza.html">Inregistrare</a> &nbsp; &nbsp; &nbsp;
+            <a href="index.html">Acasă</a> &nbsp; &nbsp; &nbsp;
+            <a href="inregistreaza.html">Înregistrează</a> &nbsp; &nbsp; &nbsp;
             <a href="video.html">Video</a> &nbsp; &nbsp; &nbsp;
             <a href="despre_html.html">Despre</a> &nbsp; &nbsp; &nbsp;
-            <a href="deseneaza.html">Deseneaza</a> 
+            <a href="deseneaza.html">Desen</a> 
         </nav>
 
 
-        <h1> Informatii despre continutul sectiunilor: </h1>
+        <h1> Informații despre conținutul secțiunilor: </h1>
         <main>
             <article>
                 <h3> Pagina Acasă </h3>
