--- a/inregistreaza.html
+++ b/inregistreaza.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title> Inregistrare </title>
+    <title> Înregistrează </title>
 </head>
 
 <body>
@@ -13,18 +13,18 @@
         </h1>
     </header>
     <nav>
-        <a href="index.html">Acasa</a> &nbsp; &nbsp; &nbsp;
-        <a href="inregistreaza.html">Inregistrare</a> &nbsp; &nbsp; &nbsp;
+        <a href="index.html">Acasă</a> &nbsp; &nbsp; &nbsp;
+        <a href="inregistreaza.html">Înregistrează</a> &nbsp; &nbsp; &nbsp;
         <a href="video.html">Video</a> &nbsp; &nbsp; &nbsp;
         <a href="despre_html.html">Despre</a> &nbsp; &nbsp; &nbsp;
-        <a href="deseneaza.html">Deseneaza</a>
+        <a href="deseneaza.html">Desen</a>
     </nav>
 
     <br >
     <br >
     <form>
         <fieldset>
-            <legend>Informatii generale:</legend>
+            <legend>Informații generale:</legend>
 
             <label for="uname">Nume utilizator:</label>
             <input type="text" id="uname" name="uname"><br><br>
@@ -50,7 +50,7 @@
         <br >
 
         <fieldset>
-            <legend>Informatii personale:</legend>
+            <legend>Informații personale:</legend>
 
             <label for="sex">Sexul:</label>
             <select id="sex">
@@ -60,26 +60,26 @@
             <br >
             <br >
 
-            <label for="mancare" >Mancarea preferata:</label>
+            <label for="mancare" >Mâncarea preferată:</label>
             <input list="food" id="mancare">
             <datalist id="food">
                 <option value="Pizza">Pizza</option>  
-                <option value="Salata">Salata</option>
-                <option value="Cartofi prajiti">Cartofi Prajiti</option>
+                <option value="Salata">Salată</option>
+                <option value="Cartofi prajiti">Cartofi Prăjiti</option>
             </datalist>
             <br >
             <br >
             
-            <label for="culoare">Culoare preferata:</label>
+            <label for="culoare">Culoare preferată:</label>
             <input type="color" id="culoare" name="culoare"><br><br>
 
-            <label for="data">Data nasterii:</label>
+            <label for="data">Data nașterii:</label>
             <input type="date" id="data" name="data"><br><br>
 
-            <label for="ora">Ora nasterii:</label>
+            <label for="ora">Ora nașterii:</label>
             <input type="time" id="ora" name="ora"><br><br>
 
-            <label for="varsta">Varsta:</label>
+            <label for="varsta">Vârsta:</label>
             <input type="range" id="varsta" name="varsta"><br><br>
 
             <label for="adresaurl">Adresa paginii personale:</label>
@@ -92,7 +92,7 @@
         </fieldset>
         <br >
         <br >
-        <button type="submit" value="Submit" disabled>Inregistreaza</button>
+        <button type="submit" value="Submit" disabled>Înregistrează</button>
     </form>
 
 
