--- a/video.html
+++ b/video.html
@@ -11,11 +11,11 @@
                 </h1>
         </header>
         <nav>
-            <a href="index.html">Acasa</a> &nbsp; &nbsp; &nbsp;
-            <a href="inregistreaza.html">Inregistrare</a> &nbsp; &nbsp; &nbsp;
+            <a href="index.html">Acasă</a> &nbsp; &nbsp; &nbsp;
+            <a href="inregistreaza.html">Înregistrează</a> &nbsp; &nbsp; &nbsp;
             <a href="video.html">Video</a> &nbsp; &nbsp; &nbsp;
             <a href="despre_html.html">Despre</a> &nbsp; &nbsp; &nbsp;
-            <a href="deseneaza.html">Deseneaza</a> 
+            <a href="deseneaza.html">Desen</a> 
         </nav>
         <br \>
         <br \>
