Rezolvare partiala laborator 4

--- a/inregistreaza.html
+++ b/inregistreaza.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" type="text/css" href="css/stil.css" />
     <title> Înregistrează </title>
 </head>
 
 <body>
     <header>
-        <h1> <img src="images/logo.jpg" alt="logo" height="150" width="200" />
-            Programare web cu red panda
+        <h1> <img src="images/logo.jpg" alt="logo" height="150" width="200" /> Programare web cu red panda
         </h1>
     </header>
     <nav>
@@ -20,8 +20,8 @@
         <a href="deseneaza.html">Desen</a>
     </nav>
 
-    <br >
-    <br >
+    <br>
+    <br>
     <form>
         <fieldset>
             <legend>Informații generale:</legend>
@@ -46,8 +46,8 @@
 
         </fieldset>
 
-        <br >
-        <br >
+        <br>
+        <br>
 
         <fieldset>
             <legend>Informații personale:</legend>
@@ -57,19 +57,19 @@
                 <option label="Feminin">Feminin </option>
                 <option label="Masculin">Masculin</option>
             </select>
-            <br >
-            <br >
+            <br>
+            <br>
 
-            <label for="mancare" >Mâncarea preferată:</label>
+            <label for="mancare">Mâncarea preferată:</label>
             <input list="food" id="mancare">
             <datalist id="food">
                 <option value="Pizza">Pizza</option>  
                 <option value="Salata">Salată</option>
                 <option value="Cartofi prajiti">Cartofi Prăjiti</option>
             </datalist>
-            <br >
-            <br >
-            
+            <br>
+            <br>
+
             <label for="culoare">Culoare preferată:</label>
             <input type="color" id="culoare" name="culoare"><br><br>
 
@@ -88,10 +88,10 @@
             <label for="descriere">Descriere:</label>
             <textarea id="descriere" name="descriere"></textarea><br><br>
 
-            
+
         </fieldset>
-        <br >
-        <br >
+        <br>
+        <br>
         <button type="submit" value="Submit" disabled>Înregistrează</button>
     </form>
 
