--- a/deseneaza.html
+++ b/deseneaza.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8"/>
-        <title>DESEN</title>
-    </head>
-    <body>
-        <header>
-                <h1> <img src="images/logo.jpg" alt="logo" height="150" width="200" />
-                    Programare web cu red panda
-                </h1>
-        </header>
-        <nav>
-            <a href="index.html">Acasă</a> &nbsp; &nbsp; &nbsp;
-            <a href="inregistreaza.html">Înregistrează</a> &nbsp; &nbsp; &nbsp;
-            <a href="video.html">Video</a> &nbsp; &nbsp; &nbsp;
-            <a href="despre_html.html">Despre</a> &nbsp; &nbsp; &nbsp;
-            <a href="deseneaza.html">Desen</a>
-        </nav>
 
-    
-        <svg width="800" height="800">
+<head>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" type="text/css" href="css/stil.css" />
+    <title>DESEN</title>
+</head>
+
+<body>
+    <header>
+        <h1> <img src="images/logo.jpg" alt="logo" height="150" width="200" /> Programare web cu red panda
+        </h1>
+    </header>
+    <nav>
+        <a href="index.html">Acasă</a> &nbsp; &nbsp; &nbsp;
+        <a href="inregistreaza.html">Înregistrează</a> &nbsp; &nbsp; &nbsp;
+        <a href="video.html">Video</a> &nbsp; &nbsp; &nbsp;
+        <a href="despre_html.html">Despre</a> &nbsp; &nbsp; &nbsp;
+        <a href="deseneaza.html">Desen</a>
+    </nav>
+
+
+    <svg width="800" height="800">
             <polygon points="100,10 40,198 190,78 10,78 160,198" style="fill:red;stroke:orange;stroke-width:5;" /> 
             <polygon points="100 150, 40 300, 160 300" style="fill:green;stroke:black;stroke-width:1" />
             <polygon points="100 300, 30 450, 170 450" style="fill:green;stroke:black;stroke-width:1" />
@@ -43,7 +45,7 @@
                 <stop offset="100%" style="stop-color:rgb(0,0,255);stop-opacity:1" />
             </radialGradient>
             <rect x="0" y="682" rx="20" ry="20" width="205" height="50" style="fill:url(#gradrect)" />
-            <polyline points="195 682,220 682,220 702,240 702,240 722,260 722,260 740, 280 740" style="fill:white;stroke:red;stroke-width:4" />
+            <polyline points="195 682,220 682,220 702,240 702,240 722,260 722,260 740, 280 740" style="fill:#355C7D;stroke:red;stroke-width:4" />
             <defs>
                 <linearGradient id="grad1" x1="0%" y1="0%" x2="100%" y2="0%">
                   <stop offset="0%" style="stop-color:rgb(255,255,0);"/> <!--stop-opacity:1-->
@@ -61,9 +63,9 @@
 
         </svg>
 
-        <footer>
-            <p> &copy; 2020.Programare web</p>
-        </footer>
-    </body>
-</html>
+    <footer>
+        <p> &copy; 2020.Programare web</p>
+    </footer>
+</body>
 
+</html>
