--- a/video.html
+++ b/video.html
@@ -1,32 +1,35 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8"/>
-        <title> Video </title>
-    </head>
-    <body>
-        <header>
-                <h1> <img src="images/logo.jpg" alt="logo" height="150" width="200" />
-                    Programare web cu red panda
-                </h1>
-        </header>
-        <nav>
-            <a href="index.html">Acasă</a> &nbsp; &nbsp; &nbsp;
-            <a href="inregistreaza.html">Înregistrează</a> &nbsp; &nbsp; &nbsp;
-            <a href="video.html">Video</a> &nbsp; &nbsp; &nbsp;
-            <a href="despre_html.html">Despre</a> &nbsp; &nbsp; &nbsp;
-            <a href="deseneaza.html">Desen</a> 
-        </nav>
-        <br \>
-        <br \>
 
-        <iframe width="1129" height="635" src="https://www.youtube.com/embed/Qu59cLEA4HQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <iframe width="1129" height="635" src="https://www.youtube.com/embed/DSehQsYU9h4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <iframe width="1129" height="635" src="https://www.youtube.com/embed/hPKab2d4_Xw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        
-        <hr>
-        <footer>
-            <p> &copy; 2020.Programare web</p>
-        </footer>
-    </body>
+<head>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" type="text/css" href="css/stil.css" />
+    <title> Video </title>
+</head>
+
+<body>
+    <header>
+        <h1> <img src="images/logo.jpg" alt="logo" height="150" width="200" /> Programare web cu red panda
+        </h1>
+    </header>
+    <nav>
+        <a href="index.html">Acasă</a> &nbsp; &nbsp; &nbsp;
+        <a href="inregistreaza.html">Înregistrează</a> &nbsp; &nbsp; &nbsp;
+        <a href="video.html">Video</a> &nbsp; &nbsp; &nbsp;
+        <a href="despre_html.html">Despre</a> &nbsp; &nbsp; &nbsp;
+        <a href="deseneaza.html">Desen</a>
+    </nav>
+    <br \>
+    <br \>
+
+    <iframe width="1129" height="635" src="https://www.youtube.com/embed/Qu59cLEA4HQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="1129" height="635" src="https://www.youtube.com/embed/DSehQsYU9h4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="1129" height="635" src="https://www.youtube.com/embed/hPKab2d4_Xw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    <hr>
+    <footer>
+        <p> &copy; 2020.Programare web</p>
+    </footer>
+</body>
+
 </html>
