--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/stil.css" />
     <title> ACASĂ </title>
 </head>
@@ -13,7 +14,7 @@
         </h1>
     </header>
     <nav>
-        <a href="index.html">Acasă</a> &nbsp; &nbsp; &nbsp;
+        <a class="active" href="index.html">Acasă</a> &nbsp; &nbsp; &nbsp;
         <a href="inregistreaza.html">Înregistrează</a> &nbsp; &nbsp; &nbsp;
         <a href="video.html">Video</a> &nbsp; &nbsp; &nbsp;
         <a href="despre_html.html">Despre</a> &nbsp; &nbsp; &nbsp;
@@ -21,7 +22,7 @@
     </nav>
 
 
-    <h1> Informații despre conținutul secțiunilor: </h1>
+    <div id="hAnimat"><h1> Informații despre conținutul secțiunilor: </h1></div>
     <main>
         <article>
             <h3> Pagina Acasă </h3>
