--- a/deseneaza.html
+++ b/deseneaza.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/stil.css" />
     <title>DESEN</title>
 </head>
@@ -17,7 +18,7 @@
         <a href="inregistreaza.html">Înregistrează</a> &nbsp; &nbsp; &nbsp;
         <a href="video.html">Video</a> &nbsp; &nbsp; &nbsp;
         <a href="despre_html.html">Despre</a> &nbsp; &nbsp; &nbsp;
-        <a href="deseneaza.html">Desen</a>
+        <a class="active" href="deseneaza.html">Desen</a>
     </nav>
 
 
@@ -45,7 +46,7 @@
                 <stop offset="100%" style="stop-color:rgb(0,0,255);stop-opacity:1" />
             </radialGradient>
             <rect x="0" y="682" rx="20" ry="20" width="205" height="50" style="fill:url(#gradrect)" />
-            <polyline points="195 682,220 682,220 702,240 702,240 722,260 722,260 740, 280 740" style="fill:#355C7D;stroke:red;stroke-width:4" />
+            <polyline points="195 682,220 682,220 702,240 702,240 722,260 722,260 740, 280 740" style="fill:none;stroke:red;stroke-width:4" />
             <defs>
                 <linearGradient id="grad1" x1="0%" y1="0%" x2="100%" y2="0%">
                   <stop offset="0%" style="stop-color:rgb(255,255,0);"/> <!--stop-opacity:1-->
