--- a/despre_html.html
+++ b/despre_html.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/stil.css" />
     <title>PROGRAMARE WEB</title>
 </head>
@@ -16,7 +17,7 @@
         <a href="index.html">Acasă</a> &nbsp; &nbsp; &nbsp;
         <a href="inregistreaza.html">Înregistrează</a> &nbsp; &nbsp; &nbsp;
         <a href="video.html">Video</a> &nbsp; &nbsp; &nbsp;
-        <a href="despre_html.html">Despre</a> &nbsp; &nbsp; &nbsp;
+        <a class="active" href="despre_html.html">Despre</a> &nbsp; &nbsp; &nbsp;
         <a href="deseneaza.html">Desen</a>
     </nav>
 
@@ -31,7 +32,7 @@
         <br />
     </p>
     <i><b>Tag-urile</b></i> html cele mai utilizate în realizarea tabelelor sunt:
-    <table border="1">
+    <table>
         <tr>
             <td>table</td>
             <td>definește un tabel</td>
