--- a/inregistreaza.html
+++ b/inregistreaza.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/stil.css" />
     <title> Înregistrează </title>
 </head>
@@ -14,7 +15,7 @@
     </header>
     <nav>
         <a href="index.html">Acasă</a> &nbsp; &nbsp; &nbsp;
-        <a href="inregistreaza.html">Înregistrează</a> &nbsp; &nbsp; &nbsp;
+        <a class="active" href="inregistreaza.html">Înregistrează</a> &nbsp; &nbsp; &nbsp;
         <a href="video.html">Video</a> &nbsp; &nbsp; &nbsp;
         <a href="despre_html.html">Despre</a> &nbsp; &nbsp; &nbsp;
         <a href="deseneaza.html">Desen</a>
