Rezolvare partiala laborator5

--- a/deseneaza.html
+++ b/deseneaza.html
@@ -18,7 +18,8 @@
         <a href="inregistreaza.html">Înregistrează</a> &nbsp; &nbsp; &nbsp;
         <a href="video.html">Video</a> &nbsp; &nbsp; &nbsp;
         <a href="despre_html.html">Despre</a> &nbsp; &nbsp; &nbsp;
-        <a class="active" href="deseneaza.html">Desen</a>
+        <a class="active" href="deseneaza.html">Desen</a> &nbsp; &nbsp; &nbsp;
+        <a href="invat_js.html">Învăț JS</a> 
     </nav>
 
 
