--- a/despre_html.html
+++ b/despre_html.html
@@ -18,11 +18,13 @@
         <a href="inregistreaza.html">Înregistrează</a> &nbsp; &nbsp; &nbsp;
         <a href="video.html">Video</a> &nbsp; &nbsp; &nbsp;
         <a class="active" href="despre_html.html">Despre</a> &nbsp; &nbsp; &nbsp;
-        <a href="deseneaza.html">Desen</a>
+        <a href="deseneaza.html">Desen</a> &nbsp; &nbsp; &nbsp;
+        <a href="invat_js.html">Învăț JS</a> 
+
     </nav>
 
     <h1>Programare web</h1>
-    <h2>Limbajul HTML</h2>
+    <h2 id="h2despre">Limbajul HTML</h2>
     <p><b>HTML(HyperText Markup Language)</b> este un <i>limbaj de marcare</i> utilizat pentru a crea pagini web.
         <br />
         <br /> Un exemplu de cod html îl găsiți în imaginea următoare care se află la adresa <a href="http://upload.wikimedia.org/wikipedia/commons/e/e4/HTML_logo.png">http://upload.wikimedia.org/wikipedia/commons/e/e4/HTML_logo.png</a>
