--- a/inregistreaza.html
+++ b/inregistreaza.html
@@ -18,7 +18,9 @@
         <a class="active" href="inregistreaza.html">Înregistrează</a> &nbsp; &nbsp; &nbsp;
         <a href="video.html">Video</a> &nbsp; &nbsp; &nbsp;
         <a href="despre_html.html">Despre</a> &nbsp; &nbsp; &nbsp;
-        <a href="deseneaza.html">Desen</a>
+        <a href="deseneaza.html">Desen</a>  &nbsp; &nbsp; &nbsp;
+        <a href="invat_js.html">Învăț JS</a>
+
     </nav>
 
     <br>
