--- a/video.html
+++ b/video.html
@@ -18,7 +18,9 @@
         <a href="inregistreaza.html">Înregistrează</a> &nbsp; &nbsp; &nbsp;
         <a class="active" href="video.html">Video</a> &nbsp; &nbsp; &nbsp;
         <a href="despre_html.html">Despre</a> &nbsp; &nbsp; &nbsp;
-        <a href="deseneaza.html">Desen</a>
+        <a href="deseneaza.html">Desen</a> &nbsp; &nbsp; &nbsp;
+        <a href="invat_js.html">Învăț JS</a>
+
     </nav>
     <br \>
     <br \>
