--- a/despre_html.html
+++ b/despre_html.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ro">
 
 <head>
     <meta charset="utf-8" />
@@ -69,7 +69,7 @@
                 <option value="negru">negru</option>
             </select><br />
         <label for="descriere">Descriere:</label>
-        <textarea rows="2" cols="3" name="descriere"></textarea><br/>
+        <textarea rows="2" cols="3" id="descriere"></textarea><br/>
         <input type="checkbox" id="confirm" name="confirm" value="Sunt de acord cu conditiile">
         <label for="confirm">Sunt de acord cu condițiile</label><br />
         <br />
