--- a/video.html
+++ b/video.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ro">
 
 <head>
     <meta charset="utf-8" />
@@ -22,15 +22,15 @@
         <a href="invat_js.html">Învăț JS</a>
 
     </nav>
-    <br \>
-    <br \>
+    <br />
+    <br />
     
     <div class="flex-container">
-        <div>    <iframe width="300" height="400" src="https://www.youtube.com/embed/Qu59cLEA4HQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div>    <iframe width="300" height="400" src="https://www.youtube.com/embed/Qu59cLEA4HQ" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-        <div>    <iframe width="400" height="400" src="https://www.youtube.com/embed/DSehQsYU9h4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div>    <iframe width="400" height="400" src="https://www.youtube.com/embed/DSehQsYU9h4" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-        <div>    <iframe width="300" height="400" src="https://www.youtube.com/embed/hPKab2d4_Xw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div>    <iframe width="300" height="400" src="https://www.youtube.com/embed/hPKab2d4_Xw" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </div>
 
