--- a/continut/index.html
+++ b/continut/index.html
@@ -5,53 +5,30 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/stil.css" />
-    <title> ACASĂ </title>
+    <title> Proiect1 - PW </title>
 </head>
 
-<body>
+<body onload="schimbaContinut('acasa')">
     <header>
         <h1> <img src="images/logo.jpg" alt="logo" height="150" width="200" /> Programare web cu red panda
         </h1>
     </header>
     <nav>
-        <a class="active" href="index.html">Acasă</a> &nbsp; &nbsp; &nbsp;
-        <a href="inregistreaza.html">Înregistrează</a> &nbsp; &nbsp; &nbsp;
-        <a href="video.html">Video</a> &nbsp; &nbsp; &nbsp;
-        <a href="despre_html.html">Despre</a> &nbsp; &nbsp; &nbsp;
-        <a href="deseneaza.html">Desen</a>  &nbsp; &nbsp; &nbsp;
-        <a href="invat_js.html">Învăț JS</a>
-
+        <a onclick="schimbaContinut('acasa')">Acasă</a> &nbsp; &nbsp; &nbsp;
+        <a onclick="schimbaContinut('inregistreaza')">Înregistrează</a> &nbsp; &nbsp; &nbsp;
+        <a onclick="schimbaContinut('video')">Video</a> &nbsp; &nbsp; &nbsp;
+        <a onclick="schimbaContinut('despre_html')">Despre</a> &nbsp; &nbsp; &nbsp;
+        <a onclick="schimbaContinut('deseneaza')">Desen</a>  &nbsp; &nbsp; &nbsp;
+        <a onclick="schimbaContinut('invat_js')">Învăț JS</a> &nbsp; &nbsp; &nbsp;
+        <a onclick="schimbaContinut('persoane', 'persoane.js', 'incarcaPersoane')">Persoane</a>
     </nav>
 
+    <main id="continut"></main>
 
-    <div id="hAnimat"><h1> Informații despre conținutul secțiunilor: </h1></div>
-    <main>
-        <article>
-            <h3> Pagina Acasă </h3>
-            <p>Pagina Acasă conține informații despre conținutul fiecărei secțiuni ale site-ului. </p>
-        </article>
-
-        <article>
-            <h3> Pagina Înregistrează </h3>
-            <p>Pagina Înregistrează permite crearea și completarea profilului personal al unui utilizator. </p>
-        </article>
-
-        <article>
-            <h3>Pagina Video</h3>
-            <p>Pagina Video conține mai multe fișiere video de pe YouTube. </p>
-        </article>
-
-        <article>
-            <h3>Pagina Despre</h3>
-            <p>Pagina Despre este fișierul despre_html.html din laboratorul 2 adaptat ca să se integreze în site.</p>
-        </article>
-
-    </main>
-
-    <hr>
     <footer>
         <p> &copy; 2020.Programare web</p>
     </footer>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
