--- a/continut/index.html
+++ b/continut/index.html
@@ -19,9 +19,12 @@
         <a onclick="schimbaContinut('video')">Video</a> &nbsp; &nbsp; &nbsp;
         <a onclick="schimbaContinut('despre_html')">Despre</a> &nbsp; &nbsp; &nbsp;
         <a onclick="schimbaContinut('deseneaza')">Desen</a>  &nbsp; &nbsp; &nbsp;
-        <a onclick="schimbaContinut('invat_js')">Învăț JS</a> &nbsp; &nbsp; &nbsp;
-        <a onclick="schimbaContinut('persoane', 'persoane.js', 'incarcaPersoane')">Persoane</a>
+        <a onclick="schimbaContinut('invat_js', null, 'getInfo')">Învăț JS</a> &nbsp; &nbsp; &nbsp;
+        <a onclick="schimbaContinut('persoane', 'persoane.js', 'incarcaPersoane')">Persoane</a> &nbsp; &nbsp; &nbsp;
+        <a onclick="schimbaContinut('verifica')">Verificare</a>
     </nav>
+    <br />
+    <br />
 
     <main id="continut"></main>
 
