--- a/continut/inregistreaza.html
+++ b/continut/inregistreaza.html
@@ -1,6 +1,6 @@
 <br>
 <br>
-<form>
+<form method="post" action="api/utilizatori" onsubmit="return inregistreaza(this);">
     <fieldset>
         <legend>Informații generale:</legend>
 
@@ -70,6 +70,6 @@
     </fieldset>
     <br>
     <br>
-    <button type="submit" value="Submit" disabled>Înregistrează</button>
+    <button type="submit" value="Submit" >Înregistrează</button>
 </form>
     <hr>
