--- a/continut/invat_js.html
+++ b/continut/invat_js.html
@@ -9,7 +9,7 @@
     <a href=#s4>Secțiune Tabel</a> &nbsp; &nbsp; &nbsp;
 </aside>
 
-<section onload="getInfo()" id="s1" >
+<section id="s1" >
     <h2>Secțiune Informativă</h2>
     <p> Data și timpul curent: </p>
     <div id="data"> </div>
@@ -57,7 +57,7 @@
     <br />
     
 
-    <canvas width="1000" height="400" id="plansa"></canvas> <!--onclick="desenare(event)"-->
+    <canvas onclick="desenare(event)" width="1000" height="400" id="plansa"></canvas> <!--onclick="desenare(event)"-->
 
     
 
