--- a/continut/index.html
+++ b/continut/index.html
@@ -21,7 +21,9 @@
         <a onclick="schimbaContinut('deseneaza')">Desen</a>  &nbsp; &nbsp; &nbsp;
         <a onclick="schimbaContinut('invat_js', null, 'getInfo')">Învăț JS</a> &nbsp; &nbsp; &nbsp;
         <a onclick="schimbaContinut('persoane', 'persoane.js', 'incarcaPersoane')">Persoane</a> &nbsp; &nbsp; &nbsp;
-        <a onclick="schimbaContinut('verifica')">Verificare</a>
+        <a onclick="schimbaContinut('verifica')">Verificare</a> &nbsp; &nbsp; &nbsp;
+        <a onclick="schimbaContinut('cumparaturi', 'cumparaturi.js')">Cumpărături</a>
+
     </nav>
     <br />
     <br />
