Rezolvare task2 Laborator 8

--- a/continut/index.html
+++ b/continut/index.html
@@ -22,7 +22,7 @@
         <a onclick="schimbaContinut('invat_js', null, 'getInfo')">Învăț JS</a> &nbsp; &nbsp; &nbsp;
         <a onclick="schimbaContinut('persoane', 'persoane.js', 'incarcaPersoane')">Persoane</a> &nbsp; &nbsp; &nbsp;
         <a onclick="schimbaContinut('verifica')">Verificare</a> &nbsp; &nbsp; &nbsp;
-        <a onclick="schimbaContinut('cumparaturi', 'cumparaturi.js')">Cumpărături</a>
+        <a onclick="schimbaContinut('cumparaturi', 'cumparaturi.js','getLista')">Cumpărături</a>
 
     </nav>
     <br />
